Add Lexeme category and label
