# service/resources/commons/commons.py
@@ -2,32 +2,32 @@ from flask import abort
 from flask_restful import (Resource, reqparse,
                            fields, marshal_with)
 
-from .utils import get_image_url
+from .utils import get_media_url_by_title
 
 # Used for validateion
 media_args = reqparse.RequestParser()
 
 
-media_args.add_argument('filename', type=str, help="Please provide a file name")
+media_args.add_argument('titles', type=str, help="Please provide a file name")
 
 
 
 # Used for serialization
 mediaFields = {
-    'filename': fields.String,
+    'title': fields.String,
     'url': fields.String
 }
 
 class CommonsFIleUrLPost(Resource):
     @marshal_with(mediaFields)
-    def post(self, file_name):
+    def post(self, titles):
         args = media_args.parse_args()
         # TODO: Add arguments check
-        if not args['filename'] or not file_name:
+        if not args['titles'] or not titles:
             abort(400, f'Please provide required parameters {str(list(args.keys()))}')
         
-        file_url = get_image_url(args['filename'])
-        if not file_url:
-            return {}
+        media_data = get_media_url_by_title(args['titles'])
+        if type(media_data) != list:
+            abort(media_data['status_code'], media_data)
 
-        return file_url, 200
+        return media_data, 200
